# AI-STORE-BUILDER

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.api  FINAL_SUMMARY.md  LICENSE  LOCAL_DEV_GUIDE.md  PROJECT_STATUS.md  README.md  SERVER_STATUS.txt  TESTING_PLAN.md  alembic.ini  deploy.sh  docker-compose.yml  health_check.py  init_db.py  nginx-aisb-api.conf  pyproject.toml  requirements-claude.txt  requirements.txt  start-dev.ps1  start-enhanced.sh  test_ai_chat.py  test_api_quick.py  test_full_system.py
.docs/: PROJECT-WORKFLOW-ANALYSIS.md
.figma/: README.md  component-specifications.backup.md  component-specifications.md  design-showcase.html  design-system-rules.backup.md  design-system-rules.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_products_orders.py  003_email_verification.py  004_customers_coupons_reviews.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  ai_chat.py  analytics.py  auth.py  categories.py  coupons.py  customers.py  dashboard.py  health.py  jobs.py  orders.py  payments.py  preview.py  products.py  reviews.py  storefront.py  stores.py  tenants.py  uploads.py
app/middleware/: auth.py  rate_limit.py  tenant.py
app/models/: __init__.py  base.py  category.py  coupon.py  customer.py  job.py  order.py  product.py  review.py  store.py  tenant.py  user.py
app/schemas/: __init__.py  ai_chat.py  auth.py  category.py  common.py  coupon.py  customer.py  job.py  order.py  product.py  review.py  store.py  storefront.py  tenant.py
docs/: BLUEPRINT.md  PERFORMANCE_ENHANCEMENTS.md  PROJECT_ARCHITECTURE.md  QUICK_START.md
frontend/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json
infra/: .dockerignore  .dockerignore.api  ai-store-builder-api.service  ai-store-builder-worker.service  nginx-aisb-api.conf  nginx-ssl.conf  supabase_schema.sql
scripts/: check_db.py  generate_secrets.py  run_local.py  safe-deploy.ps1  setup-ssl.sh  start-enhanced.bat  start-local.bat  start_backend.ps1  test_auth_local.py
tests/: conftest.py  test_api_quick.py  test_auth.py  test_categories_crud.py  test_dashboard_payments.py  test_health.py  test_orders_checkout.py  test_products_crud.py  test_sanitizer.py  test_security.py  test_stores.py  test_stores_crud.py
(+62 files in other folders)
